# XenoideGTK

src/app/: CMakeLists.txt  DocumentGtk.cpp  DocumentGtk.h  DocumentHeader.cpp  DocumentHeader.h  DocumentManagerGtk.cpp  DocumentManagerGtk.h  FolderBrowserGtk.cpp  FolderBrowserGtk.h  MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h  main.cpp
